yamls/api.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: api
  name: api

spec:
  containers:
  - args:
    - client
    image: k8s-demo-api:v1
    name: api
  restartPolicy: Always
